# tzapac-x402-permit2

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile.store-api  Dockerfile.store-web  LICENSE  NOTICE  PLAN.md  PROOF_OF_CONCEPT.md  README.md  bbt_client.py  bbt_mvp_client.py  bbt_mvp_server.py  bbt_probe.md  bbt_storefront.py  build_mvp_images.sh  debug_middleware.py  deployment_info.md  diary.md  docker-compose.model3-etherlink.yml  docker-compose.wallet-poc.yml  logging_utils.py  manual_payment_test.py  manual_storefront.py  mvp_client.py  mvp_server.py  nginx.wallet-poc.conf  playbook_permit2_flow.py  sdk_payment_proof.py  terms.html  wallet_connect_poc.css  wallet_connect_poc.html  wallet_connect_poc.js  x402_permit2_report.md
bbt-x402-facilitator/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.bbt  README.md  config.json.example  docker-compose.bbt.yml  docker-entrypoint.bbt.sh  justfile
bbt-x402-facilitator/facilitator/: Cargo.toml  README.md  config.json.example
bbt-x402-facilitator/facilitator/src/: chain.rs  config.rs  lib.rs  main.rs  run.rs  schemes.rs
compliance/: compliance-offchain-implementation-plan.md  patch-0000-add-error-reason.patch.md  patch-0001-add-compliance-gate.facilitator-local.patch.md  patch-0002-route-level-integration.patch.md  patch-0003-config-env.patch.md  patch-0004-initial-screening.patch.md
contracts/: x402ExactPermit2Proxy_etherlink_flat.sol  x402ExactPermit2Proxy_etherlink_standard_input.json
docs/: bbt_token_reference.md  client_guide.md  coinbase_comparison.md  coinbase_model3_comparison.md  feature_matrix.md  (+6 more)
(+73 files in other folders)
