[package]
name = "x402-facilitator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Production-ready x402 facilitator server binary"
readme = "README.md"
publish = false

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "x402-facilitator"
path = "src/main.rs"

[features]
default = ["telemetry", "chain-eip155"]
telemetry = ["dep:tracing", "x402-types/telemetry", "x402-facilitator-local/telemetry", "x402-chain-eip155?/telemetry"]
chain-eip155 = ["dep:x402-chain-eip155"]
full = ["telemetry", "chain-eip155"]

[dependencies]
x402-types = { workspace = true, features = ["cli"]}
x402-facilitator-local = { workspace = true }
x402-chain-eip155 = { workspace = true, features = ["facilitator"], optional = true }

dotenvy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
